changing pom to use the 2.0.0-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <kotlin.version>1.3.50</kotlin.version>
-        <tornadofx.version>1.7.19</tornadofx.version>
+        <tornadofx.version>2.0.0-SNAPSHOT</tornadofx.version>
     </properties>
 
     <dependencies>
